import java.util.List;

public interface ImageCollector {
	public void collectImages(List<Photo> photos);
}
