@startuml
title Darstellung der Bilder mit Composite-Pattern


note as Beschreibung
    Für die hierarchische Durchsuchung der Ordner nach Bildern
    bietet sich das Composite-Pattern an, welches rekursiv
    alle Bilder eines Ordners sammelt und in einer Liste
    speichert.

    Die Spezialität hier ist, dass ""Ordner"" gleichzeitig
    die Blatt- wie auch die Komposit-Klasse sein kann:
    Ordner ohne weiteren "Kinder" sind Blatt-Klassen.
end note

class Programm {
    collectPhotos(List<Photo>, folder)
    showImageGrid(List<Photo> photos)
}

note top of Programm
    Das Programm sammelt die Photos mittels dem ImageCollector-
    Composite: Es stösst auf dem Top-Folder die ""collectImages()""-Methode an:

    ""topFolder.collectImages(photos)""
end note

interface ImageCollector {
    public void collectImages(List<Photo>);
}
note left of ImageCollector
    Das Kompositum-Interface
end note

class Ordner implements ImageCollector{
    List<Photo>
    List<Ordner>
}
note left of Ordner
    Blatt und konkrete Komposit-Klasse
end note

class Photo {

}

Programm --> ImageCollector
ImageCollector "*" o-- Ordner
Ordner o- Photo
Ordner *- Ordner

@enduml
